# OpenGL

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  main.cpp
SOIL_Builds/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
ShadersDir/: fragment.glsl  vertex.glsl
glfw-3.2.1/Build3/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.2.1/Build3/examples/: Makefile  cmake_install.cmake
glfw-3.2.1/Build3/src/: Makefile  cmake_install.cmake  glfw3.pc
glfw-3.2.1/Build3/tests/: Makefile  cmake_install.cmake
